# clickpy

./: .flake8  Makefile  README.md  pyproject.toml
clickpy/: __init__.py  strategy.py
clickpy/strategy/: __init__.py  _strategy.py  strategy.py
tests/: __init__.py  basic_clicks_test.py  click_strategy_test.py  generate_click_strategy_test.py  natural_click_test.py  test_main_cli.py
