[tool.poetry]
name = "clickpy"
version = "0.11.0"
description = "Automated mouse clicking script"
authors = ["fitzypop <fitzypop@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fitzypop/clickpy"
exclude = [".vscode/settings.json"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fitzypop/clickpy/issues"

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^6.3.2"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-sugar = "^0.9.4"
# typer-cli = "^0.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
